<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:orientation="vertical" android:layout_width="match_parent"
android:layout_height="match_parent">

<RelativeLayout
    android:id="@+id/relativeLayout_StartScreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/textView_Name1"
        android:layout_width="92dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="14dp"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="46dp"
        android:text="@string/choose_name_for_player_1"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView_Name2"
        android:layout_width="92dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="13dp"
        android:layout_marginLeft="13dp"
        android:layout_marginTop="147dp"
        android:text="@string/choose_name_for_player_2"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editText_Name1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/textView_Name1"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="110dp"
        android:layout_marginTop="76dp"
        android:ems="10"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editText_Name2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView_Name2"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="111dp"
        android:layout_marginTop="177dp"
        android:ems="10"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/button_Enter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/editText_Name2"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="124dp"
        android:layout_marginBottom="-73dp"
        android:text="@string/enter" />
</RelativeLayout>

</LinearLayout>